--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "learn-ts",
   "version": "1.0.0",
   "description": "learn ts",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
+    "start": "webpack-dev-server --mode=development --config ./build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.4.4",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.1",
